Bug 436823 - [Wayland] Impossible to move an app to another virtual desktop by dragging its entry in task manager and dropping it on Pager widget
Summary: [Wayland] Impossible to move an app to another virtual desktop by dragging it...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Pager widget (other bugs)
Version First Reported In: master
Platform: Neon Linux
: NOR normal
Target Milestone: 1.0
Assignee: Eike Hein
URL:
Keywords: wayland-only
: 415169 424595 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-05-09 13:16 UTC by Patrick Silva
Modified: 2021-09-16 16:00 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.22
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2021-05-09 13:16:10 UTC
SUMMARY
On X11 we can move an app to another virtual desktop by dragging its entry
in task manager and dropping it on Pager widget.
However, we can not do the same on Wayland.

EXPECTED RESULT
we should be able to move an app to another virtual desktop via DnD on Wayland
too.

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.21.80
KDE Frameworks Version: 5.83.0
Qt Version: 5.15.2
Graphics Platform: Wayland
Comment 1 David Redondo 2021-05-10 12:54:05 UTC
Hmm works for me
Comment 2 David Edmundson 2021-05-10 12:56:11 UTC
I see dragging from pager to another desktop in the page working, but dragging from task manager to a desktop on the pager does seem to fail for me.
Comment 3 David Redondo 2021-05-10 12:57:37 UTC
I should learn to read...
Comment 4 David Redondo 2021-05-11 06:53:14 UTC
I know what's wrong and how to fix it
Comment 5 Bug Janitor Service 2021-05-11 09:18:53 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/461
Comment 6 David Redondo 2021-05-11 09:45:41 UTC
Git commit b38b12510a19d850ff93347003356c20cfbe627f by David Redondo.
Committed on 10/05/2021 at 15:18.
Pushed by davidre into branch 'master'.

WaylandTasksModel: Extract uuids from mimedata

We are using uuids now. See above in this class where we return the uuid for the  mime data.

M  +6    -5    libtaskmanager/waylandtasksmodel.cpp
M  +2    -2    libtaskmanager/waylandtasksmodel.h

https://invent.kde.org/plasma/plasma-workspace/commit/b38b12510a19d850ff93347003356c20cfbe627f
Comment 7 David Redondo 2021-05-11 09:48:24 UTC
Git commit 3266a11197b60e7a4a552b21afb9927004ca3211 by David Redondo.
Committed on 11/05/2021 at 09:46.
Pushed by davidre into branch 'master'.

Fix dropping from task manager to pager applet on wayland

We are using uuids now as ids in the window management protocol.

M  +4    -4    applets/pager/plugin/pagermodel.cpp

https://invent.kde.org/plasma/plasma-desktop/commit/3266a11197b60e7a4a552b21afb9927004ca3211
Comment 8 Patrick Silva 2021-05-13 20:57:00 UTC
Not fixed on Plasma 5.22 beta.

Operating System: Arch Linux
KDE Plasma Version: 5.21.90
KDE Frameworks Version: 5.82.0
Qt Version: 5.15.2
Graphics Platform: Wayland
Comment 9 Patrick Silva 2021-06-08 18:32:12 UTC
Fixed on neon unstable, it persists on Arch Linux after update to Plasma 5.22.
Comment 10 luancarvalho 2021-06-08 19:16:35 UTC
*** Bug 424595 has been marked as a duplicate of this bug. ***
Comment 11 Podagric 2021-07-09 20:30:47 UTC
*** Bug 415169 has been marked as a duplicate of this bug. ***
Comment 12 Patrick Silva 2021-09-16 16:00:59 UTC
Fixed on Plasma 5.23 beta.