Fix dropping from task manager to pager applet on wayland

We are using uuids now as ids in the window management protocol.
BUG:436823